test/cases/compile_errors/global_variable_stored_in_global_const.zig
var a: u32 = 2;
const b = a;
pub export fn entry() void {
    _ = b;
}

// error
//
// :2:11: error: unable to resolve comptime value
// :2:11: note: initializer of container-level variable must be comptime-known
